download/archives/2.6.0/index.markdown
---
author: Bertrand
comments: false
date: 2012-10-03 23:19:02+00:00
layout: page
slug: 2-6-0
title: Banshee 2.6.0
show-sidebar: true
group: archives
sidebar-group: archives
wordpress_id: 1264
---


	
  * **Release Date:** 2012-10-03

	
  * **Source Tarball:** [banshee-2.6.0.tar.xz](http://ftp.gnome.org/pub/GNOME/sources/banshee/2.6/banshee-2.6.0.tar.xz)

	
  * **Release Information:**
[NEWS](http://ftp.gnome.org/pub/GNOME/sources/banshee/2.6/banshee-2.6.0.news),
[sha256sum](http://ftp.gnome.org/pub/GNOME/sources/banshee/2.6/banshee-2.6.0.sha256sum)




[![Download Now](/theme/css/images/download-button.png)](/download)






Banshee 2.6 is the culmination of six months' work by 15 developers, 30
translators and dozens of bug reporters and testers. It is a stable release,
the successor to Banshee 2.4.






### New features


      

####  Lots of improvement on OS X:






  * Hardware support for USB mass storage devices.


![Screenshot showing Banshee on OSX syncing with an USB mass storage device](http://download.banshee.fm/shots/2.6.0/osx_usb_mass_storage-700.png)



  * Handle opening files directly in Finder.

  * Use native file chooser dialogs for importing files.

  * Improve keyboard shortcuts.

  * Fix various volume issues and inconsistencies.

  * Switch to gtk-mac-integration and move to cocoa API.

  * Add debug and logging facility to OS X launcher.






####  LastFM: Add device scrobbling support





Enable Last.fm scrobbling of recent plays from a connected device.
Currently only available on devices supported by the AppleDevice extension.





####  File management options are now specific to each source





The "Copy files when importing" and "Update file and folder names"
settings can now be set independently for Music and Videos.






### Other Enhancements





      
  * LargeTrackInfoDisplay: Display track rating in "Now Playing" view
      
  * MassStorage: Support the Samsung Galaxy Nexus Android phone
      
  * Re-enable the AAC audio profile
      
  * ThickClient: Append 'Banshee' to window title
      
  * MassStorage: Support reading playlists from multiple folders
      
  * Last.fm: Switch to 2.0 API for scrobbling and improve error handling
      
  * LastFM: Remove invalid tracks from the queue after a scrobbling error
      
  * Mpris: Add CanSetFullscreen and Fullscreen properties
      
  * Replace custom volume widget with gtk's VolumeButton
      
  * Improved threading in some areas around GUI manipulation




### Notable Bug Fixes (69 fixed since 2.4.0)





      
  * Migo.Syndication: Handle feeds with malformed enclosure URLs
      
  * AmazonMp3.Store: Fix URL redirection for sign out action
      
  * [bgo#577396](http://bugzilla.gnome.org/show_bug.cgi?id=577396): AppleDeviceTrackInfo: Fix reading and writing rating values
      
  * [bgo#587756](http://bugzilla.gnome.org/show_bug.cgi?id=587756): MassStorage: Save playlists relative to BaseDirectory
      
  * [bgo#615219](http://bugzilla.gnome.org/show_bug.cgi?id=615219): Don't increment skip counter when restarting current track
      
  * [bgo#623974](http://bugzilla.gnome.org/show_bug.cgi?id=623974): BasicTrackDetailsPage: Blank year spin button when 0
      
  * [bgo#624976](http://bugzilla.gnome.org/show_bug.cgi?id=624976): Gui.Canvas.Rect: log invalid values for Width/Height
      
  * [bgo#626659](http://bugzilla.gnome.org/show_bug.cgi?id=626659): ServiceManager: check properly if a service is required
      
  * [bgo#634063](http://bugzilla.gnome.org/show_bug.cgi?id=634063): FileSystemQueueSource: Reload when tracks are imported
      
  * [bgo#634758](http://bugzilla.gnome.org/show_bug.cgi?id=634758): PlaylistSource: Make sure the right tracks are removed
      
  * [bgo#636450](http://bugzilla.gnome.org/show_bug.cgi?id=636450): PathPattern: Limit filename length to 200 characters
      
  * [bgo#642830](http://bugzilla.gnome.org/show_bug.cgi?id=642830): AppleDevice: Fix device loading if invalid tracks are present
      
  * [bgo#657769](http://bugzilla.gnome.org/show_bug.cgi?id=657769): PrimarySource: Make sure AddTrackJob is marked as finished
      
  * [bgo#661112](http://bugzilla.gnome.org/show_bug.cgi?id=661112): Gui.Canvas.Size: log invalid values for Width/Height
      
  * [bgo#662909](http://bugzilla.gnome.org/show_bug.cgi?id=662909): PlaylistParser: Retry HTTP request after timeout
      
  * [bgo#666696](http://bugzilla.gnome.org/show_bug.cgi?id=666696): DapSource: Flush pending changes when quitting
      
  * [bgo#671948](http://bugzilla.gnome.org/show_bug.cgi?id=671948): DapSource: Put the playlists below the default sources
      
  * [bgo#672744](http://bugzilla.gnome.org/show_bug.cgi?id=672744): UPnPServerSource: Fix crash when getting the root object
      
  * [bgo#673037](http://bugzilla.gnome.org/show_bug.cgi?id=673037): libossifer: Fix certificate validation with libsoup 2.38
      
  * [bgo#673416](http://bugzilla.gnome.org/show_bug.cgi?id=673416): DbIteratorJob: Abort job after several consecutive failures
      
  * [bgo#676144](http://bugzilla.gnome.org/show_bug.cgi?id=676144): PlayQueueSource: Fix high memory usage when shuffling
      
  * [bgo#677288](http://bugzilla.gnome.org/show_bug.cgi?id=677288): PrimarySource: Fix pruning of artists from the database
      
  * [bgo#679260](http://bugzilla.gnome.org/show_bug.cgi?id=679260): AppleDevice: Postpone invalid tracks drop to the sync cycle
      
  * [bgo#680679](http://bugzilla.gnome.org/show_bug.cgi?id=680679): PlayerEngine: Fix reporting of playback errors
      
  * [bgo#682510](http://bugzilla.gnome.org/show_bug.cgi?id=682510): Mpris: Only raise PropertiesChanged signal if value changed
      
  * [bgo#682996](http://bugzilla.gnome.org/show_bug.cgi?id=682996): Dap.MassStorage: PlaylistPaths to return empty array
      
  * [bgo#683359](http://bugzilla.gnome.org/show_bug.cgi?id=683359): SourceView: log errors in SetCellDataFunc to avoid crashing
      
  * [bgo#683498](http://bugzilla.gnome.org/show_bug.cgi?id=683498): a11y: Fix a NullReferenceException in ListViewAccessible


  



#### Banshee has a lot more to offer! Check out the previous major release notes...





	
  * [Read about features added in Banshee 2.4.0](/download/archives/2.4.0)

	
  * [Read about features added in Banshee 2.2.0](/download/archives/2.2.0)

	
  * [Read about features added in Banshee 2.0.0](/download/archives/2.0.0)

	
  * [Read about features added in Banshee 1.8.0](/download/archives/1.8.0)

	
  * [Read about features added in Banshee 1.6.0](/download/archives/1.6.0)

	
  * [Read about features added in Banshee 1.4.0](/download/archives/1.4.0)




### Dependencies





	
  * Mono 2.4.3 (.NET 2.0 Profile / gmcs)

	
  * SQlite 3.4

	
  * Gtk# 2.12.10

	
  * GStreamer 0.10.26

	
  * GLib 2.22

	
  * dbus-sharp 0.7

	
  * dbus-sharp-glib 0.5

	
  * Mono.Addins (mono-addins) 0.6.2

	
  * TagLib# (taglib-sharp) >= 2.0.3.7

	
  * Required to build default feature stack:

	
    * libmtp >= 0.3.0

	
    * mono-zeroconf >= 0.8.0

	
    * boo >= 0.8.1

	
    * webkit-1.0 >= 1.2.2

	
    * gdata-sharp-youtube >= 1.4

	
    * gio-sharp >= 2.22.3, gtk-sharp-beans >= 2.14.1, gudev-sharp and gkeyfile-sharp

	
    * libgpod-sharp >= 0.7.95

	
    * Mono.Upnp >= 0.1




	
  * Run-time requirements for default feature stack:

	
    * udev

	
    * media-player-info

	
    * Brasero >= 0.8.1

	
    * Avahi

	
    * gst-plugins-bad (providing the bpmdetect GStreamer plugin)







### Community





#### Contributors For This Release


The following people directly contributed to the release of this version of Banshee. Without their help, there would be no release!


> 
     Alexander Kojevnikov, Andres G. Aragoneses, Bertrand Lorentz,
     David Nielsen, Diego Fernandez, Fabrice Bellet, Javon Harper,
     Jensen Somers, Kevin Anthony, Olivier Dufour, Pavol Babincak,
     Phil Trimble, Roderich Schupp, Samuel Gyger, Timo Dörr



The following people contributed updated translations to this release.    Without them, our project's reach would be much more limited.


> 
     Aurimas ?ernius, Alexandre Franke, Andika Triwidada, Andreas Nesdal,
     Andrej Žnidarši?, Bruno Brouard, Cheng-Chia Tseng, Chris Leonard,
     Daniel Mustieles, Daniel Nylander, Daniel Winzen, Filipe Gomes,
     Fran Diéguez, Gabor Kelemen, Gianvito Cavasoli, Ioannis Zampoukas,
     Jordi Mas, Joe Hansen, Kentaro KAZUHAMA, Lucas Mezencio, Marek ?ernocký,
     Martin Srebotnjak, Matej Urban?i?, Muhammet Kara, ???????? ???????,
     Piotr Dr?g, Praveen Illa, R?dolfs Mazurs, Techlive Zheng,
     Žygimantas Beru?ka





#### Contributors In Past Releases




> 
        Aaron Bockover, Abner Silva, Adam Lofts, Age Bosma, Alan McGovern,
    Alban Crequy, Alberto Gonzalez, Alex Bennee, Alex Kloss, Alex Launi,
    Alex Mauer, Alex Willmy, Alexander Hixon, Alexander Kojevnikov,
    Alexandros Frantzis, Alp Toker, Anders Petersson, Andre Klapper,
    Andrea Cimitan, Andreas Neustifter, Andreas Nilsson, Andrew Conkling,
    Andrés G. Aragoneses, Andy Midgette, Andy Street, Aran Cox, Arthur Carli,
    Arun Raghavan, Aurélien Mino, Aydemir Ula? ?ahin, Ben Maurer,
    Benjamín Valero Espinosa, Bertrand Lorentz, Bill Dawson, Bob Copeland,
    Bojan Rajkovic, Brad Taylor, Brandon Perry, Brian Lucas, Brian Nickel,
    Brian Teague, Carlos Sanchez, Chase Geigle, Chow Loong Jin, Chris Howie,
    Chris Jones, Chris Lahey, Chris Toshok, Chris Turchin, Christian Hergert,
    Christian Krause, Christoph Burgdorf, Christopher James Halse Rogers,
    Claude Paroz, Cody Russell, Corec, Cosmin Banu, Dan Wilson, Dan Winship,
    Daniel Munkton, Daniel Siegel, David Nielsen, David Spreen, David Stone,
    Diego E. Pettenò, Diego Fernandez, Dinh Ngoc Tu, Dougal Stanton,
    Dustin C. Hatch, Eitan Isaacson, Elena Grassi, Eoin Hennessy, Eric Butler,
    Erik Schmidt, Fabian Jost, Fabrice Bellet, Felipe Almeida Lessa,
    Felipe Castillo, Fernando Casanova, Florent Thoumie, Frank Ziegler,
    Fredrik Hedberg, Félix Velasco, Gabriel Burt, Garrett LeSage,
    Ghislain Lacroix, Götz Waschk, Haitao Feng, Hajime Mizuno,
    Hans Petter Jansson, Harold Schreckengost, Iain Lane,
    Igor Guerrero Fonseca, Ilya Konstantinov, Ivan N. Zlatev, Jack Deslippe,
    Jakub Steiner, James Otting, James Willcox, Jan Arne Petersen, Jason Conti,
    Jason Taylor, Javon Harper, Jeff Tickle, Jeff Wheeler, Jensen Somers,
    Jeroen Budts, Jo Shields, Johannes Koch, Johannes Kuhn, John Millikin,
    Jonas Urth Olsen, Jordi Mas, Jorge Castro, Julien Moutte, Juri Pakaste,
    Ján Sokoly, Jérémie Laval, K. Vishnoo Charan Reddy, Ken Vandine,
    Kentaro KAZUHAMA, Kevin Anthony, Kevin Duffus, Koichi Akabe,
    Konstantin Oshiyko, Larry Ewing, Lauri Kotilainen, Lukas Lipka,
    Mackenan Grassi, Marijn Ros, Mark Busby, Mark Saunders, Martin Pitt,
    Matt Enright, Matt Sturgeon, Michael Kaiser, Michael Martin-Smucker,
    Michael Monreal, Michael Monreal, Micha? Sawicz, Miguel de Icaza,
    Mike Gemünde, Mike Urbanski, Moritz Schallaböck, Nathan Palmer,
    Neil Loknath, Nicholas Doyle, Nicholas Parker, Nicolò Chieffo,
    Nils Naumann, Nuno Araujo, Oben Sonne, Okano Takayoshi, Olivier Dufour,
    Oscar Forero, Pacho Ramos, Patrick van Staveren, Paul Cutler, Paul Lange,
    Pavel Antonov, Pavol Babincak, Pepijn van de Geer, Pete Johanson,
    Peter de Kraker, Phil Trimble, Pratik Patel, Przemys?aw Grzegorczyk,
    Raimo Radczewski, Robin Stocker, Roderich Schupp, Rodney Dawes,
    Romain Tartière, Ruben Vermeersch, Ryan Collier, Samuel Gyger,
    Sandy Armstrong, Scott Peterson, Sebastian Dröge, Shaun McCance,
    Sjoerd Simons, Tim Fisken, Tim Yamin, Timo Dörr, Timothy Arceri,
    Tobias Arrskog, Tobias Mueller, Todd Berman, Travis Glenn Hansen,
    Travis Patterson, Travis Reitter, Trey Ethridge, Udesh Liyanaarachchi,
    Valentin Sawadski, Victor Vargas, Will Farrington, Will Thompson,
    William Friesen, William Pettersson, William Witt, Wouter Bolsterlee,
    Yuuto Tokunaga, Zhou Ting.






#### Reporting Bugs, Joining the Community


If you encounter any bad behavior with this release, please do not hesitate to [file bugs](/contribute/file-bugs/)!

We welcome new contributors - developers, translators, artists, writers, support gurus - to join our community.  [Join us!](/contribute)

